--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 asgiref==3.7.2
 Django==4.2.5
 django-autoslug==1.9.9
-django-cities-light==3.9.2
-django-phonenumber-field==7.1.0
+Pillow==10.0.0
 progressbar2==4.2.0
 python-utils==3.7.0
 pytz==2023.3.post1
